# ATS_Vision_2022

./: CMakeLists.txt  README.md  camera-param.yml  cameraParams-0575.xml  main.cpp  main.h  修改中文文件夹.txt
armor/include/armor_finder/: predictor_kalman.h
armor/src/armor_finder/: armor_finder.cpp
armor/src/armor_finder/anti_top/: anti_top.cpp
armor/src/armor_finder/classifier/: classifier.cpp
armor/src/armor_finder/find/: find_armor_box.cpp
armor/src/armor_finder/predictor/: predictor_kalman.cpp
armor/src/armor_finder/searching_state/: searching_state.cpp
armor/src/armor_finder/send_target/: send_target.cpp
camera/GxCamera/: GxCamera.cpp  GxCamera.h
doc/: 代码调试说明V1.2.md  操作手自瞄使用手册V1.1.docx  环境配置手册.md
energy/src/energy/: mark.cpp
others/include/: additions.h  constants.h  serial.h
others/src/: additions.cpp  options.cpp  serial.cpp
others/src/camera/: camera_wrapper.cpp
tools/: auto_start.sh  watchdog.sh
tools/kf_analysis/: kf_analysis.py
tools/pare1/: conv1_b  conv1_w  conv2_b  conv2_w  conv3_b  conv3_w  fc1_b  fc1_w  fc2_b  fc2_w
tools/pare2/: conv1_b  conv1_w  conv2_b  conv2_w  conv3_b  conv3_w  fc1_b  fc1_w  fc2_b  fc2_w
tools/pare3/: conv1_b  conv1_w  conv2_b  conv2_w  conv3_b  conv3_w  fc1_b  fc1_w  fc2_b  fc2_w
